First version of profile page to Add/View Itineraries. Added placeholder for itinerary page. Also added cleanDB.sql and fillDB.py to populate database

--- a/itineroid/templates/itinerary.html
+++ b/itineroid/templates/itinerary.html
@@ -1,1 +1,12 @@
-<h>Insert your code here</h>
+<h1> Itinerary: {{ itinerary.name }} </h1>
+
+{% for location in itinerary.location_set.all %}
+    <p>
+    Location: {{ location.name }}</br>
+    <ul>
+    {% for activity in location.activity_set.all %}
+        <li>Activity: {{ activity.name }}</li>
+    {% endfor %}
+    </ul>
+    </p>
+{% endfor %}
